--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- Facebook Auth 제공을 위한 코드 -->
+    <!-- Facebook 로고인 제공을 위한 설정 -->
     <string name="app_name">attemptLogin</string>    
     <string name="facebook_app_id">3261744130770555</string>
     <string name="fb_login_protocol_scheme">fb3261744130770555</string>
+    <!-- Facebook 로고인 제공을 위한 설정 -->
 </resources>
